# pyTemplate

./: CHANGELOG.md  README.md  setup.cfg
cdstemplate/: __init__.py  corpus_counter_script.py
tests/: test_word_count.py
