[metadata]
name = cdstemplate
version = 1.0.0
description = A template repo for data science and machine learning projects at UMass Center for Data Science.
long_description = = file: README.md
long_description_content_type = text/markdown

[options]
# What version of python does your library work with?
python_requires => 3.9
# The name of your package which will be installed
packages = cdstemplate
# All the dependencies needed for running your module go here
install_requires =
    dvc==2.10.2
    numpy
    pandas
    scikit-learn

[options.extras_require]
# Extra dependencies only needed for running tests go here
test =
    pytest

# Dependencies that are useful only to developers, like an autoformatter and support for visualizations in jupyter notebooks go here
dev =
    black
    jupyter
    matplotlib
    seaborn